[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yxsdk"
dynamic = ["version", "readme"]      # 版本和 README 动态读取
authors = [
    { name = "Yi Chen", email = "sgrchen@163.com" },
]
description = "A Python SDK for common utilities"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "mysql-connector-python>=8.0.0",
    "redis>=3.0.0",
    "psutil>=7.0.0",
    "requests>=2.0.0",
    "PyJWT>=2.3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/sgrchen/yxsdk"

[project.optional-dependencies]
dev = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "src/version.txt" }
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.packages.find]
where = ["src"]

